--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <header></header>
 <body>
-<font color=green>Production Environment</font>
+<font color=green>Staging Environment</font>
 </body>
 </html>
+
 
